--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -31,16 +31,18 @@ jobs:
         uses: schmiddim/action-wget-unzip@v2
         with:
           url: https://github.com/psb1558/Junicode-font/archive/refs/tags/v1.003.zip
-          destination: .fonts
+          destination: .
+
+      - name: Set Path to mainfont
+        run: sed -i 's/setmainfont \[/&Path, /' config/template.tex
 
       - name: Verify dependencies
         run: |
           pandoc --version
           xetex --version
           ls multibib.lua
-          ls .fonts
-          fc-cache -E .fonts
-          fc-list | grep Junicode
+          grep setmainfont config/template.tex
+          ls Junicode*
 
       - name: Build
         run: bash build.sh
