--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -9,34 +9,44 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Working directory check
         run: |
           pwd
           ls
-      - name: Set up Pandoc
-        uses: siacodelabs/setup-pandoc@v1
-        with:
-          xelatex: true
+
+      - name: Install Pandoc
+        uses: r-lib/actions/setup-pandoc@v2
+
+      - name: Install XeLaTeX
+        run: sudo apt-get install -y texlive-xetex
+
       - name: Download lua-filter
         run: wget https://raw.githubusercontent.com/pandoc-ext/multibib/main/_extensions/multibib/multibib.lua
+
       - name: Download mainfont
         uses: schmiddim/action-wget-unzip@v2
         with:
           url: https://github.com/psb1558/Junicode-font/archive/refs/tags/v1.003.zip
           destination: .fonts
+
       - name: Verify dependencies
         run: |
           pandoc --version
           xetex --version
           ls multibib.lua
           ls .fonts
+
       - name: Build
         run: bash build.sh
+
       - name: Check for Resulting PDF
         run: |
           ls cornelius-cv.pdf
+
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
