--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -53,6 +53,7 @@ jobs:
 
       - name: Release
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             cornelius-cv.pdf
