--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -2,9 +2,7 @@ name: Deploy CV
 
 on:
   push:
-    branches: main
-    tags:
-      - v*
+    tags: v*
 jobs:
   deploy:
     runs-on: ubuntu-latest
