supply and reformat page ranges

--- a/publications/article/CorneliusLayFolksCatechism2019.yaml
+++ b/publications/article/CorneliusLayFolksCatechism2019.yaml
@@ -34,7 +34,7 @@ references:
       month: 2
   language: en
   license: All rights reserved
-  page: 14–36
+  page: 14-36
   title: '*The Lay Folks’ Catechism*, alliterative verse, and *cursus*'
   type: article-journal
   URL: http://ecommons.luc.edu/english_facpubs/60
