--- a/publications/article/CorneliusTakamiyaMS232023.yaml
+++ b/publications/article/CorneliusTakamiyaMS232023.yaml
@@ -11,7 +11,7 @@ references:
   issued:
     - year: 2023
   language: en
-  status: forthcoming
+  status: in press
   title: >-
     Takamiya MS 23, its exemplar, and the <span class="nocase">*editio
     princeps*</span> of *Piers Plowman*
