--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -2,7 +2,9 @@ name: Deploy CV
 
 on:
   push:
-    tags: v*
+    branches: main
+    tags:
+      - v*
 jobs:
   deploy:
     runs-on: ubuntu-latest
