supply links for publications
DOI, publisher URL, or ecommons URL

--- a/publications/review-short/CorneliusConsolationPhilosophyCosmic2021.yaml
+++ b/publications/review-short/CorneliusConsolationPhilosophyCosmic2021.yaml
@@ -5,6 +5,7 @@ references:
       given: Ian
   citation-key: CorneliusConsolationPhilosophyCosmic2021
   container-title: Speculum
+  DOI: 10.1086/714837
   ISSN: 0038-7134
   issue: '3'
   issued:
