--- a/publications/review-short/CorneliusPiersPlowmanParalleltext2014.yaml
+++ b/publications/review-short/CorneliusPiersPlowmanParalleltext2014.yaml
@@ -16,3 +16,4 @@ references:
   title: 'Piers Plowman: a parallel-text edition of the A, B, C and Z versions'
   type: article-journal
   volume: '83'
+  DOI: 10.2307/45275365
