--- a/publications/article/CorneliusTakamiyaMS232023.yaml
+++ b/publications/article/CorneliusTakamiyaMS232023.yaml
@@ -12,6 +12,7 @@ references:
     - year: 2023
   language: en
   status: in press
+  page: 71-91
   title: >-
     Takamiya MS 23, its exemplar, and the <span class="nocase">*editio
     princeps*</span> of *Piers Plowman*
