--- a/publications/article/NoonanRegionalCollaborationManuscripts2023.yaml
+++ b/publications/article/NoonanRegionalCollaborationManuscripts2023.yaml
@@ -15,6 +15,7 @@ references:
   issued:
     - year: 2023
   language: en
+  page: 195-207
   status: in press
   title: Regional collaboration and the Peripheral Manuscripts Project
   type: article-journal
