--- a/publications/article/CorneliusMedievalManuscriptsLoyola2023.yaml
+++ b/publications/article/CorneliusMedievalManuscriptsLoyola2023.yaml
@@ -34,7 +34,7 @@ references:
   issued:
     - year: 2023
   license: All rights reserved
-  status: in press
+  page: 387-398
   title: Medieval manuscripts at Loyola University Chicago
   type: article-journal
   volume: '8'
