--- a/source/service.yaml
+++ b/source/service.yaml
@@ -10,29 +10,63 @@ service:
     - subentity: Faculty Appeals Committee
       position:
       - title: member
-        years: 2022--2024
+        dates:
+          begin:
+            year: 2022
+            month: 8
+          end:
+            year: 2024
+            month: 6
 
   - entity: Loyola University Chicago Faculty Council
     subitem:
     - subentity: CAS-Humanities Division
       position:
       - title: representative
-        years: 2020--present
+        dates:
+          begin:
+            year: 2021
+            month: 1
+          end:
+            year: 2024
+            month: 6
     - subentity: "*Ad hoc* Faculty Handbook Committee"
       position:
       - title: member
-        years: 2019--present
+        dates:
+          begin:
+            year: 2019
+            month: 10
+          end:
       - title: co-chair
-        years: 2021--2022
+        dates:
+          begin:
+            year: 2021
+            month: 1
+          end:
+            year: 2022
+            month: 5
       - title: chair
-        years: 2023
+        dates:
+          begin:
+            year: 2023
+            month: 1
+          end:
+            year: 2024
+            month: 6
 
   - entity: Undergraduate College, Yale University
     subitem:
     - subentity: Committee on Honors and Academic Standing
       position:
       - title: member
-        years: 2012--2015
+        dates:
+          begin:
+            year: 2012
+            month: 8
+          end:
+            year: 2015
+            month: 5
 
 # Department
 
@@ -43,89 +77,153 @@ service:
     - subentity: Department Council
       position:
       - title: member
-        years: 2018--2020, 2022--2023
+        dates:
+          literal: 2018--2020, 2022--2024
 
     - subentity: Tenure and Promotion Committee
       position:
       - title: member
-        years: 2019--2020, 2022--2023
+        dates:
+          literal: 2019--2020, 2022--2024
 
     - subentity: Undergraduate Programs Committee
       position:
       - title: member
-        years: 2016--2018
+        dates:
+          begin:
+            year: 2016
+            month: 8
+          end:
+            year: 2018
+            month: 6
 
     - subentity: Graduate Programs Committee
       position:
       - title: member
-        years: 2021--2022
+        dates:
+          literal: 2021--2022, 2023--2024 # omitting spring 2023
       - title: placement officer
-        years: 2018--2023
+        dates:
+          literal: 2018--2020, 2021--present # omitting fall 2020
 
     - subentity: MA Exam Committee
       position:
       - title: member
-        years: 2017--2018, 2022--2023
+        dates:
+          literal: 2017--2018, 2022--2023
       - title: chair
-        years: 2022--2023
+        dates:
+          begin:
+            year: 2022
+            month: 8
+          end:
+            year: 2023
+            month: 8
 
     - subentity: Edward Surtz, S.J. Memorial Lecture in the Humanities
       position:
       - title: lecture convener
-        years: 2016--2022
+        dates:
+          begin:
+            year: 2016
+            month: 8
+          end:
+            year: 2022
+            month: 5
 
   - entity: Interdisciplinary Programs, Loyola University Chicago
     subitem:
     - subentity: Medieval Studies Program
       position:
       - title: interim co-director
-        years: 2019--2020
+        dates:
+          begin:
+            year: 2019
+            month: 8
+          end:
+            year: 2020
+            month: 5
 
     - subentity: Interdisciplinary Working Group for the Study of Premodern Cultures
       position:
       - title: co-convener
-        years: 2021--present
+        dates:
+          begin:
+            year: 2021
+            month: 8
+          end:
 
   - entity: Center for Textual Studies and Digital Humanities, Loyola University Chicago
     subitem:
     - subentity: Faculty Advisory Committee
       position:
       - title: member
-        years: 2018--present
+        dates:
+          begin:
+            year: 2018
+            month: 8
+          end:
 
   - entity: Department of English, Yale University
     subitem:
     - subentity: Aims and Procedures Committee
       position:
       - title: member
-        years: 2012--2016
+        dates:
+          begin:
+            year: 2012
+            month: 8
+          end:
+            year: 2016
+            month: 5
 
     - subentity: Committee on Lectures and Colloquia
       position:
       - title: member
-        years: 2012--2016
+        dates:
+          begin:
+            year: 2012
+            month: 8
+          end:
+            year: 2016
+            month: 5
 
     - subentity: Medieval Colloquium
       position:
       - title: faculty convener
-        years: 2012--2016
+        dates:
+          begin:
+            year: 2012
+            month: 8
+          end:
+            year: 2016
+            month: 5
 
     - subentity: Honors and Prizes Committee
       position:
       - title: member
-        years: 2009--2010, 2014--2016
+        dates:
+          literal: 2009--2010, 2014--2016
 
     - subentity: Graduate Admissions Committee
       position:
       - title: member
-        years: 2009--2010, 2014--2016
+        dates:
+          literal: 2009--2010, 2014--2016
 
     - subentity: Graduate Studies Committee
       position:
       - title: member
-        years: 2010--2011, 2012--2014
+        dates:
+          literal: 2010--2011, 2012--2014
       - title: diversity recruitment coordinator
-        years: 2012--2013
+        dates:
+          begin:
+            year: 2012
+            month: 12
+          end:
+            year: 2013
+            month: 4
 
 # Other
 
@@ -136,57 +234,79 @@ service:
     - subentity: Loyola University Chicago Chapter
       position:
       - title: vice president
-        years: 2020--present
+        dates:
+          begin:
+            year: 2020
+            month:
 
   - entity: "*Filologia Germanica -- Germanic Philology*"
     subitem:
     - subentity: Scientific committee for volume 15 (2023)
       position:
       - title: member
-        years:
 
   - entity: Illinois Medieval Association
     subitem:
     - subentity: Conference Committee for the 2018 Meeting
       position:
       - title: co-chair
-        years:
 
   - entity: "International *Piers Plowman* Society"
     subitem:
     - subentity: Executive Council
       position:
       - title: member
-        years: 2019--2022
+        dates:
+          begin:
+            year: 2019
+            month: 1
+          end:
+            year: 2022
+            month: 12
       - title: treasurer
-        years: 2020--2022
+        dates:
+          begin:
+            year: 2020
+            month: 1
+          end:
+            year: 2022
+            month: 12
     - subentity: Program Committee for the 2019 Congress
       position:
       - title: member
-        years:
 
   - entity: Medieval Academy of America
     subitem:
     - subentity: Local Arrangements Committee for the 2010 Meeting
       position:
       - title: co-chair
-        years:
 
   - entity: New England Medieval Conference
     subitem:
     - subentity: Steering Committee
       position:
       - title: member
-        years: 2013--2015
+        dates:
+          begin:
+            year: 2013
+            month:
+          end:
+            year: 2015
+            month:
 
   - entity: Society for Textual Scholarship
     subitem:
     - subentity: Executive Board
       position:
       - title: member
-        years: 2022--2024
+        dates:
+          begin:
+            year: 2022
+            month:
+          end:
+            year: 2024
+            month:
     - subentity: Program Committee for the 2022 Meeting
       position:
       - title: member
-        years:
 ---
