regularize punctuation in titles of reviews

--- a/publications/review-short/Cornelius2023WoodPiersPlowman.yaml
+++ b/publications/review-short/Cornelius2023WoodPiersPlowman.yaml
@@ -23,7 +23,7 @@ references:
     - family: Wood
       given: Sarah
   source: www.degruyter.com
-  title: 'Piers Plowman and its Manuscript Tradition'
+  title: '"Piers Plowman" and its Manuscript Tradition'
   type: article-journal
   URL: https://www.degruyter.com/document/doi/10.1515/ang-2023-0039/html
   volume: '141'
