--- a/publications/review-short/CorneliusAlliterativeProverbsMedieval2019.yaml
+++ b/publications/review-short/CorneliusAlliterativeProverbsMedieval2019.yaml
@@ -13,9 +13,7 @@ references:
   reviewed-author:
     - family: Deskis
       given: Susan E.
-  title: >-
-    'Alliterative proverbs in medieval England: language choice and literary
-    meaning'
+  title: 'Alliterative proverbs in medieval England: language choice and literary meaning'
   type: article-journal
   volume: '88'
   URL: https://www.jstor.org/stable/26889876
