--- a/publications/review-short/CorneliusChristianMannesBileeve2022.yaml
+++ b/publications/review-short/CorneliusChristianMannesBileeve2022.yaml
@@ -24,8 +24,8 @@ references:
       given: Nicole D.
   source: www.degruyter.com
   title: >-
-    'A Christian Mannes Bileeve. Edited from Washington, Library of Congress,
-    Rare Book and Special Collections, MS 4'
+    'A Christian Mannes Bileeve,' Edited from Washington, Library of Congress,
+    Rare Book and Special Collections, MS 4
   type: article-journal
   URL: https://www.degruyter.com/document/doi/10.1515/ang-2022-0022/html
   volume: '140'
