--- a/publications/review-short/CorneliusConsolationPhilosophyCosmic2021.yaml
+++ b/publications/review-short/CorneliusConsolationPhilosophyCosmic2021.yaml
@@ -15,6 +15,6 @@ references:
   reviewed-author:
     - family: Uhlfelder
       given: Myra L.
-  title: 'The "Consolation of Philosophy" as Cosmic Image'
+  title: '"The Consolation of Philosophy" as Cosmic Image'
   type: article-journal
   volume: '96'
