--- a/publications/review-short/CorneliusEvolutionVerseStructure2019.yaml
+++ b/publications/review-short/CorneliusEvolutionVerseStructure2019.yaml
@@ -14,8 +14,6 @@ references:
   reviewed-author:
     - family: Russom
       given: Geoffrey
-  title: >-
-    'The Evolution of Verse Structure in Old and Middle English Poetry: From the
-    Earliest Alliterative Poems to Iambic Pentameter'
+  title: 'The Evolution of Verse Structure in Old and Middle English Poetry: From the Earliest Alliterative Poems to Iambic Pentameter'
   type: article-journal
   volume: '29'
