--- a/publications/review-short/CorneliusLawmenPlowmenAngloSaxon2018.yaml
+++ b/publications/review-short/CorneliusLawmenPlowmenAngloSaxon2018.yaml
@@ -13,9 +13,7 @@ references:
   reviewed-author:
     - family: Yeager
       given: Stephen
-  title: >-
-    'From lawmen to plowmen: Anglo-Saxon legal tradition and the school of
-    Langland'
+  title: 'From lawmen to plowmen: Anglo-Saxon legal tradition and the school of Langland'
   type: article-journal
   volume: '87'
   URL: https://www.jstor.org/stable/26871231
