--- a/publications/review-short/CorneliusPennCommentaryPiers2019a.yaml
+++ b/publications/review-short/CorneliusPennCommentaryPiers2019a.yaml
@@ -12,9 +12,7 @@ references:
   reviewed-author:
     - family: Hanna
       given: Ralph
-  title: >-
-    'The Penn Commentary on "Piers Plowman", Vol. 2: C Passūs 5–9; B Passūs 5–7;
-    A Passūs 5–8'
+  title: 'The Penn Commentary on "Piers Plowman", Volume 2: C Passūs 5–9; B Passūs 5–7; A Passūs 5–8'
   type: article-journal
   volume: '88'
   URL: https://www.jstor.org/stable/26889910
