--- a/publications/review-short/CorneliusYeeBawBokes2013.yaml
+++ b/publications/review-short/CorneliusYeeBawBokes2013.yaml
@@ -18,11 +18,9 @@ references:
     - family: Calabrese
       given: Michael
     - family: Shepherd
-      given: Stephen H. A.
+      given: Stephen H.&nbsp;A.
   source: MetaPress
-  title: >-
-    '"Yee? Baw for bokes": essays on medieval manuscripts and poetics in honor
-    of Hoyt N. Duggan'
+  title: '"Yee? Baw for bokes": essays on medieval manuscripts and poetics in honor of Hoyt N. Duggan'
   type: article-journal
   URL: https://doi.org/10.1484/J.YLS.1.103847
   volume: '27'
