--- a/publications/review-short/CorneliusPennCommentaryPiers2019.yaml
+++ b/publications/review-short/CorneliusPennCommentaryPiers2019.yaml
@@ -23,9 +23,7 @@ references:
     - family: Lawler
       given: Traugott
   source: www.degruyter.com
-  title: >-
-    'The Penn Commentary on "Piers Plowman". Volume 4: C Passūs 15–19; B Passūs
-    13–17'
+  title: 'The Penn Commentary on "Piers Plowman," Volume 4: C Passūs 15–19; B Passūs 13–17'
   type: article-journal
   URL: https://www.degruyter.com/document/doi/10.1515/ang-2019-0046/html
   volume: '137'
