--- a/publications/review-short/CorneliusPiersPlowmanParalleltext2014.yaml
+++ b/publications/review-short/CorneliusPiersPlowmanParalleltext2014.yaml
@@ -12,8 +12,8 @@ references:
   page: 356-7
   reviewed-author:
     - family: Schmidt
-      given: A. V. C.
-  title: 'Piers Plowman: a parallel-text edition of the A, B, C and Z versions'
+      given: A.&nbsp;V.&nbsp;C.
+  title: '"Piers Plowman": a parallel-text edition of the A, B, C and Z versions'
   type: article-journal
   volume: '83'
   DOI: 10.2307/45275365
