--- a/publications/article/NoonanRegionalCollaborationManuscripts2023.yaml
+++ b/publications/article/NoonanRegionalCollaborationManuscripts2023.yaml
@@ -16,7 +16,7 @@ references:
     - year: 2023
   language: en
   page: 195-207
-  status: in press
+  status:
   title: Regional collaboration and the Peripheral Manuscripts Project
   type: article-journal
   volume: '26'
