update pubs: add a DOIs, URLs; update status

--- a/publications/article/CorneliusCorrectionsNotationVerse2023.yaml
+++ b/publications/article/CorneliusCorrectionsNotationVerse2023.yaml
@@ -14,3 +14,4 @@ references:
     of Middle English alliterative poems
   type: article-journal
   volume: '15'
+  URL: https://ecommons.luc.edu/english_facpubs/109/
