--- a/publications/article/CorneliusTakamiyaMS232023.yaml
+++ b/publications/article/CorneliusTakamiyaMS232023.yaml
@@ -6,7 +6,7 @@ references:
     - family: Ensley
       given: J. Eric
   citation-key: CorneliusTakamiyaMS232023
-  container-title: Journal of the Early Book Society
+  container-title: The Journal of the Early Book Society
   container-title-short: JEBS
   issued:
     - year: 2023
