update publication details for Eggert commentary

--- a/publications/review-article/CorneliusTakeWorkGlobal2021.yaml
+++ b/publications/review-article/CorneliusTakeWorkGlobal2021.yaml
@@ -29,7 +29,8 @@ references:
   license: Copyright (c) 2021
   page: 39-49
   source: scholarworks.iu.edu
-  title: Take this work global
+  title: |-
+    Take this work global [Commentary on *The Work and the Reader in Literary Studies: Scholarly Editing and Book History*, by Paul Eggert]
   type: article-journal
   URL: https://scholarworks.iu.edu/journals/index.php/textual/article/view/32827
   volume: '14'
