update publication details
- add details for 'Ecologies of Latin Poetics'
- add details for Textual Cultures double review
- add URL for JEBS article
- regularize use of definite article in journal titles

--- a/publications/article/CorneliusItComplicatedIrregular2023.yaml
+++ b/publications/article/CorneliusItComplicatedIrregular2023.yaml
@@ -17,7 +17,7 @@ references:
     - family: Cornelius
       given: Ian
   citation-key: CorneliusItComplicatedIrregular2023
-  container-title: Chaucer Review
+  container-title: The Chaucer Review
   DOI: 10.5325/chaucerrev.58.2.0259
   ISSN: 0009-2002
   issue: '2'
