--- a/publications/article/CorneliusTakamiyaMS232023.yaml
+++ b/publications/article/CorneliusTakamiyaMS232023.yaml
@@ -17,4 +17,5 @@ references:
     Takamiya MS 23, its exemplar, and the <span class="nocase">*editio
     princeps*</span> of *Piers Plowman*
   type: article-journal
+  URL: https://ecommons.luc.edu/english_facpubs/112/
   volume: '26'
