--- a/publications/review-article/CorneliusAlliterativeRevivalRetrospect2012.yaml
+++ b/publications/review-article/CorneliusAlliterativeRevivalRetrospect2012.yaml
@@ -7,7 +7,7 @@ references:
     - family: Cornelius
       given: Ian
   citation-key: CorneliusAlliterativeRevivalRetrospect2012
-  container-title: Yearbook of Langland Studies
+  container-title: The Yearbook of Langland Studies
   DOI: 10.1484/J.YLS.1.103211
   ISSN: 0890-2917 2031-0242
   issued:
