--- a/publications/review-article/CorneliusMedievalBooks2024.yaml
+++ b/publications/review-article/CorneliusMedievalBooks2024.yaml
@@ -5,17 +5,19 @@ references:
       given: Ian
   citation-key: CorneliusReviewMedievalEnglish2024
   container-title: Textual Cultures
-  DOI:
+  container-title-short: TC
+  DOI: 10.14434/tc.v17i1.38311
   ISSN: 1933-7418
   issue: '1'
   issued:
     - year: 2024
+      month: 7
+      day: 4
   license: All rights reserved
   page: 9-18
-  status: in press
   title: >-
-    Untitled [Review of *Medieval English Manuscripts and Literary Forms*, by Jessica
-    Brantley and *Looking at Medieval Books: Learning to See*, by Ralph Hanna]
+    Review of *Medieval English Manuscripts and Literary Forms*, by Jessica
+    Brantley and *Looking at Medieval Books: Learning to See*, by Ralph Hanna
   type: article-journal
-  URL:
+  URL: https://scholarworks.iu.edu/journals/index.php/textual/article/view/38311
   volume: '17'
