--- a/publications/review-short/Cornelius1381YearPeasants2017.yaml
+++ b/publications/review-short/Cornelius1381YearPeasants2017.yaml
@@ -4,7 +4,7 @@ references:
     - family: Cornelius
       given: Ian
   citation-key: Cornelius1381YearPeasants2017
-  container-title: Yearbook of English Studies
+  container-title: The Yearbook of English Studies
   DOI: 10.1484/J.YLS.5.114181
   issued:
     - year: 2017
