--- a/source/teaching.yaml
+++ b/source/teaching.yaml
@@ -18,9 +18,17 @@ teaching:
     title: Exploring Poetry
     dates: 2021, 2024
 
+  - number: ENGL 299
+    title: 'Topics in Writing: Plain Text'
+    dates: 2025
+
   - number: ENGL 300
     title: History of the English Language
     dates: 2023, 2025
+
+  - number: ENGL 320
+    title: Survey of Medieval British Literature
+    dates: 2025
 
   - number: ENGL 321
     title: Introduction to Old English
