update a section title

--- a/source/publications.yaml
+++ b/source/publications.yaml
@@ -33,6 +33,6 @@ csl: config/chicago-author-date-cv.csl
 ::: {#refs-review-short}
 :::
 
-## Data-set {.unnumbered}
+## Data-sets {.unnumbered}
 ::: {#refs-dataset}
 :::
