--- a/publications/article/CorneliusProtestantElements2024.yaml
+++ b/publications/article/CorneliusProtestantElements2024.yaml
@@ -9,11 +9,12 @@ references:
   container-title-short: RES
   DOI: 10.1093/res/hgae069
   ISSN: 1471-6968
+  issue: '323'
   issued:
-    - year: 2024
+    - year: 2025
   language: en
-  page: 
+  page: 1-14
   title: Protestant elements in the *Piers Plowman* texts of Robert Crowley and Takamiya MS 23
   type: article-journal
   URL: 
-  volume: 
+  volume: '76'
