--- a/source/grants.yaml
+++ b/source/grants.yaml
@@ -1,7 +1,12 @@
 ---
 grants:
-  -
-    grantor: The Council on Library and Information Resources
+  - grantor: The Society for Textual Scholarship
+    item:
+    - award: Honorable Mention, Fredson Bowers Memorial Prize
+      dates:
+        literal: 2025
+
+  - grantor: The Council on Library and Information Resources
     item:
     - award: Digitizing Hidden Special Collections and Archives
       title: 'Peripheral Manuscripts: Digitizing Medieval Manuscript Collections in the Midwest'
@@ -18,8 +23,7 @@ grants:
           year: 2024
           month: 5
 
-  -
-    grantor: Loyola University Chicago
+  - grantor: Loyola University Chicago
     item:
     - award: Faculty Development Award, supporting one semester of research leave
       dates:
@@ -33,8 +37,7 @@ grants:
           year: 2021
           month: 6
 
-  -
-    grantor: Yale University
+  - grantor: Yale University
     item:
     - award: Morse Fellowship, supporting two semesters of research leave
       dates:
@@ -45,8 +48,7 @@ grants:
           year: 2012
           month: 6
 
-  -
-    grantor: University of Pennsylvania
+  - grantor: University of Pennsylvania
     item:
     - award: Penn-in-London Fellowship
       dates:
@@ -55,8 +57,7 @@ grants:
         end:
           year: 2007
 
-  -
-    grantor: Andrew W. Mellon Foundation
+  - grantor: Andrew W. Mellon Foundation
     item:
     - award: Fellowship in Humanistic Studies
       dates:
