--- a/source/basic.yaml
+++ b/source/basic.yaml
@@ -20,17 +20,23 @@ appointments:
   city:
   department: Department of English
   position:
-    title: Associate Professor
+  - title: Associate Professor
     dates:
       begin:
         year: 2016
         month: 8
       end:
+  - title: Director of Graduate Programs in English
+    dates:
+      begin:
+        year: 2024
+        month: 7
+      end:
 - institution: Yale University
   city:
   department: Department of English
   position:
-    title: Assistant Professor
+  - title: Assistant Professor
     dates:
       begin:
         year: 2009
