--- a/publications/article/CorneliusEndingsHalflinesJoseph.yaml
+++ b/publications/article/CorneliusEndingsHalflinesJoseph.yaml
@@ -15,5 +15,5 @@ references:
   status: in press
   title: Endings of half-lines in the Middle English alliterative *Joseph of Arimathea*
   type: article-journal
-  URL: 'https://scholars.luc.edu/en/publications/endings-of-half-lines-in-the-middle-english-alliterative-ijoseph-'
+  URL: 'https://ecommons.luc.edu/english_facpubs/115/'
   volume:
