--- a/source/service.yaml
+++ b/source/service.yaml
@@ -158,6 +158,8 @@ service:
             year: 2021
             month: 8
           end:
+            year: 2025
+            month: 5
 
   - entity: Center for Textual Studies and Digital Humanities, Loyola University Chicago
     subitem:
